--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eslint-config-lcy",
-    "version": "1.0.0",
+    "version": "1.0.3",
     "description": "LinCenYing's ESLint config",
     "author": "LinCenYing <lincenying@gmail.com> (https://github.com/lincenying/)",
     "license": "MIT",
@@ -10,7 +10,11 @@
     ],
     "main": "index.js",
     "files": [
-        "index.js"
+        "index.js",
+        "vue.js",
+        "ts.js",
+        "basic.js",
+        "standard.js"
     ],
     "peerDependencies": {
         "eslint": ">=7.4.0"
@@ -18,6 +22,7 @@
     "dependencies": {
         "@typescript-eslint/eslint-plugin": "^5.57.0",
         "@typescript-eslint/parser": "^5.57.0",
+        "eslint-config-prettier": "^8.6.0",
         "eslint-plugin-eslint-comments": "^3.2.0",
         "eslint-plugin-eslint-comments": "^3.2.0",
         "eslint-plugin-html": "^7.1.0",
@@ -27,8 +32,10 @@
         "eslint-plugin-markdown": "^3.0.0",
         "eslint-plugin-n": "^15.7.0",
         "eslint-plugin-no-only-tests": "^3.1.0",
+        "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-unicorn": "^46.0.0",
+        "eslint-plugin-unused-imports": "^2.0.0",
         "eslint-plugin-vue": "^9.10.0",
         "eslint-plugin-yml": "^1.5.0",
         "jsonc-eslint-parser": "^2.2.0",
@@ -36,6 +43,7 @@
         "yaml-eslint-parser": "^1.2.0"
     },
     "devDependencies": {
-        "eslint": "^8.37.0"
+        "eslint": "^8.37.0",
+        "prettier": "^2.8.7"
     }
 }
