--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
         "@typescript-eslint/parser": "^5.57.0",
         "eslint-config-prettier": "^8.6.0",
         "eslint-plugin-eslint-comments": "^3.2.0",
-        "eslint-plugin-eslint-comments": "^3.2.0",
         "eslint-plugin-html": "^7.1.0",
         "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-jest": "^27.2.1",
@@ -43,7 +42,6 @@
         "yaml-eslint-parser": "^1.2.0"
     },
     "devDependencies": {
-        "eslint": "^8.37.0",
-        "prettier": "^2.8.7"
+        "eslint": "^8.37.0"
     }
 }
