--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     },
     "devDependencies": {
         "eslint": "^8.37.0"
+    },
+    "publishConfig": {
+      "registry": "https://registry.npmjs.org/"
     }
 }
