--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@lincy/eslint-config",
   "version": "1.1.1",
+  "packageManager": "pnpm@8.4.0",
   "description": "LinCenYing's ESLint config",
   "author": "LinCenYing <lincenying@gmail.com> (https://github.com/lincenying/)",
   "license": "MIT",
