--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lincy/eslint-config",
-  "version": "1.1.3",
+  "version": "1.1.6",
   "packageManager": "pnpm@8.4.0",
   "description": "LinCenYing's ESLint config",
   "author": "LinCenYing <lincenying@gmail.com> (https://github.com/lincenying/)",
@@ -13,6 +13,7 @@
   "files": [
     "index.js",
     "vue.js",
+    "vue2.js",
     "ts.js",
     "basic.js",
     "standard.js"
@@ -21,10 +22,10 @@
     "eslint": ">=7.4.0"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
     "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-antfu": "^0.39.1",
+    "eslint-plugin-antfu": "^0.39.3",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "^2.27.5",
@@ -37,13 +38,14 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-unicorn": "^47.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "eslint-plugin-vue": "^9.13.0",
+    "eslint-plugin-vue": "^9.14.0",
     "eslint-plugin-yml": "^1.7.0",
     "jsonc-eslint-parser": "^2.3.0",
     "local-pkg": "^0.4.3",
     "yaml-eslint-parser": "^1.2.2"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.21.8",
     "eslint": "^8.41.0",
     "typescript": "^5.0.4"
   },
