--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lincy/eslint-config-monorepo",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "packageManager": "pnpm@8.4.0",
   "description": "LinCenYing's ESLint config",
   "author": "LinCenYing <lincenying@gmail.com> (https://github.com/lincenying/)",
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "postpublish": "open https://npmmirror.com/sync/@lincy/eslint-config",
-    "release": "bumpp package.json packages/*/package.json && pnpm publish -r"
+    "release": "bumpp package.json packages/*/package.json && pnpm publish -r --access public"
   },
   "devDependencies": {
     "@lincy/eslint-config": "workspace:*",
