--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lincy/eslint-config-vue",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "packageManager": "pnpm@8.4.0",
   "description": "LinCenYing's ESLint config",
   "author": "LinCenYing <lincenying@gmail.com> (https://github.com/lincenying/)",
@@ -19,6 +19,8 @@
   "dependencies": {
     "@lincy/eslint-config-basic": "workspace:*",
     "@lincy/eslint-config-ts": "workspace:*",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.14.0",
     "local-pkg": "^0.4.3"
   },
