--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
 shamefully-hoist = true
 scripts-prepend-node-path = true
-registry=https://registry.npmmirror.com/
+git-checks=false
+#registry=https://registry.npmmirror.com/
