--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
 shamefully-hoist = true
 scripts-prepend-node-path = true
 #git-checks=false
-#registry=https://registry.npmmirror.com/
+registry=https://registry.npmmirror.com/
