--- a/packages/basic/package.json
+++ b/packages/basic/package.json
@@ -34,5 +34,8 @@
   },
   "devDependencies": {
     "eslint": "^8.41.0"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
