--- a/packages/ts/package.json
+++ b/packages/ts/package.json
@@ -21,9 +21,13 @@
     "@lincy/eslint-config-basic": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
-    "eslint-plugin-jest": "^27.2.1"
+    "eslint-plugin-jest": "^27.2.1",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "eslint": "^8.41.0"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
