--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -24,5 +24,8 @@
   },
   "devDependencies": {
     "eslint": "^8.41.0"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
