--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@lincy/eslint-config": "workspace:*",
+    "@stylistic/eslint-plugin-migrate": "^0.0.3",
     "bumpp": "^9.2.0",
     "eslint": "^8.49.0",
     "typescript": "^5.2.2"
