--- a/packages/basic/package.json
+++ b/packages/basic/package.json
@@ -17,11 +17,12 @@
     "eslint": ">=7.4.0"
   },
   "dependencies": {
-    "eslint-plugin-antfu": "^0.41.3",
+    "@stylistic/eslint-plugin-js": "^0.0.3",
+    "eslint-plugin-antfu": "0.43.0-beta.1",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "npm:eslint-plugin-i@2.28.0-2",
-    "eslint-plugin-jsdoc": "^46.6.0",
+    "eslint-plugin-jsdoc": "^46.8.1",
     "eslint-plugin-jsonc": "^2.9.0",
     "eslint-plugin-markdown": "^3.0.1",
     "eslint-plugin-n": "^16.1.0",
