--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,6 @@
-shamefully-hoist = true
-scripts-prepend-node-path = true
+strict-peer-dependencies=false
+shamefully-hoist=true
+ignore-workspace-root-check=true
+
 #git-checks=false
 registry=https://registry.npmmirror.com/
