chore: update package.json

--- a/package.json
+++ b/package.json
@@ -70,5 +70,15 @@
     "typescript": "^5.2.2",
     "unbuild": "^2.0.0",
     "vitest": "^0.34.5"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "prettier"
+      ]
+    }
   }
 }
