--- a/package.json
+++ b/package.json
@@ -80,10 +80,10 @@
     }
   },
   "simple-git-hooks": {
-    "pre-commit": "pnpm lint-staged"
+    "pre-commit": "npx lint-staged"
   },
   "lint-staged": {
-    "*.{ts,tsx,vue}": "eslint --fix"
+    "*.{[jt]s?(x),vue,md}": "eslint --fix"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
