--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
   ],
   "main": "dist/index.cjs",
   "module": "dist/index.js",
-  "types": "index.d.ts",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "dist/index.d.ts",
+      "require": "dist/index.cjs",
+      "import": "dist/index.js"
+    }
+  },
   "files": [
     "dist"
   ],
@@ -38,7 +45,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "eslint-define-config": "^1.23.0",
-    "eslint-plugin-antfu": "^1.0.0-beta.2",
+    "eslint-plugin-antfu": "1.0.0-beta.3",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-i": "^2.28.1",
     "eslint-plugin-jsdoc": "^46.8.2",
