chore: update rules

--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
       "require": "./dist/index.cjs"
     }
   },
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --shims --clean --dts",
-    "stub": "tsup src/index.ts --format esm,cjs --shims --clean",
+    "stub": "tsup src/index.ts --format esm",
     "lint": "pnpm run stub && eslint .",
     "lint:fix": "eslint . --fix",
-    "postpublish": "open https://npmmirror.com/package/@lincy/eslint-config",
+    "postpublish": "simple-open-url https://npmmirror.com/package/@lincy/eslint-config",
     "prepublishOnly": "nr build",
     "release": "bumpp && npm publish -r --access public",
     "test": "vitest",
@@ -40,13 +40,14 @@
   },
   "dependencies": {
     "@eslint-stylistic/metadata": "0.0.4",
-    "@eslint/js": "^8.49.0",
+    "@eslint/js": "^8.50.0",
     "@stylistic/eslint-plugin-js": "0.0.4",
     "@stylistic/eslint-plugin-ts": "0.0.4",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
+    "eslint-config-flat-gitignore": "^0.1.0",
     "eslint-define-config": "^1.23.0",
-    "eslint-plugin-antfu": "1.0.0-beta.3",
+    "eslint-plugin-antfu": "1.0.0-beta.6",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-i": "^2.28.1",
     "eslint-plugin-jsdoc": "^46.8.2",
@@ -67,15 +68,16 @@
     "@antfu/ni": "^0.21.8",
     "@lincy/eslint-config": "workspace:*",
     "@stylistic/eslint-plugin-migrate": "0.0.4",
-    "@types/node": "^20.6.3",
+    "@types/node": "^20.6.5",
     "bumpp": "^9.2.0",
-    "eslint": "^8.49.0",
+    "eslint": "^8.50.0",
     "eslint-plugin-sort-keys": "^2.3.5",
     "esno": "^0.17.0",
     "lint-staged": "^14.0.1",
     "local-pkg": "^0.4.3",
     "rimraf": "^5.0.1",
     "simple-git-hooks": "^2.9.0",
+    "simple-open-url": "^3.0.1",
     "sucrase": "^3.34.0",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2",
