--- a/package.json
+++ b/package.json
@@ -39,12 +39,10 @@
     "eslint": ">=8.0.0"
   },
   "dependencies": {
-    "@eslint-stylistic/metadata": "0.0.4",
     "@eslint/js": "^8.50.0",
-    "@stylistic/eslint-plugin-js": "0.0.4",
-    "@stylistic/eslint-plugin-ts": "0.0.4",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
+    "@stylistic/eslint-plugin": "^0.0.5",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
     "eslint-config-flat-gitignore": "^0.1.0",
     "eslint-define-config": "^1.23.0",
     "eslint-plugin-antfu": "1.0.0-beta.6",
@@ -67,15 +65,14 @@
   "devDependencies": {
     "@antfu/ni": "^0.21.8",
     "@lincy/eslint-config": "workspace:*",
-    "@stylistic/eslint-plugin-migrate": "0.0.4",
-    "@types/node": "^20.6.5",
+    "@types/node": "^20.7.0",
     "bumpp": "^9.2.0",
     "eslint": "^8.50.0",
     "eslint-plugin-sort-keys": "^2.3.5",
     "esno": "^0.17.0",
     "lint-staged": "^14.0.1",
     "local-pkg": "^0.4.3",
-    "rimraf": "^5.0.1",
+    "rimraf": "^5.0.4",
     "simple-git-hooks": "^2.9.0",
     "simple-open-url": "^3.0.1",
     "sucrase": "^3.34.0",
