--- a/package.json
+++ b/package.json
@@ -39,40 +39,42 @@
     "eslint": ">=8.0.0"
   },
   "dependencies": {
-    "@eslint/js": "^8.50.0",
-    "@stylistic/eslint-plugin": "^0.0.6",
+    "@antfu/eslint-define-config": "^1.23.0-1",
+    "@stylistic/eslint-plugin": "0.0.6",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "eslint-config-flat-gitignore": "^0.1.0",
-    "eslint-define-config": "^1.23.0",
-    "eslint-plugin-antfu": "1.0.0-beta.10",
+    "eslint-plugin-antfu": "^1.0.0-beta.12",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-i": "^2.28.1",
     "eslint-plugin-jsdoc": "^46.8.2",
-    "eslint-plugin-jsonc": "^2.9.0",
+    "eslint-plugin-jsonc": "^2.10.0",
     "eslint-plugin-markdown": "^3.0.1",
     "eslint-plugin-n": "^16.1.0",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-unicorn": "^48.0.1",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "eslint-plugin-vitest": "^0.3.2",
     "eslint-plugin-vue": "^9.17.0",
-    "eslint-plugin-yml": "^1.9.0",
-    "globals": "^13.22.0",
+    "eslint-plugin-yml": "^1.10.0",
+    "globals": "^13.23.0",
     "jsonc-eslint-parser": "^2.3.0",
-    "vue-eslint-parser": "^9.3.1",
+    "local-pkg": "^0.5.0",
+    "vue-eslint-parser": "^9.3.2",
     "yaml-eslint-parser": "^1.2.2"
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.8",
     "@lincy/eslint-config": "workspace:*",
     "@stylistic/eslint-plugin-migrate": "^0.0.6",
-    "@types/node": "^20.8.2",
+    "@types/eslint": "^8.44.3",
+    "@types/node": "^20.8.3",
     "bumpp": "^9.2.0",
-    "eslint": "^8.50.0",
+    "eslint": "^8.51.0",
+    "eslint-flat-config-viewer": "^0.1.0",
     "eslint-plugin-sort-keys": "^2.3.5",
     "esno": "^0.17.0",
     "lint-staged": "^14.0.1",
-    "local-pkg": "^0.5.0",
     "rimraf": "^5.0.5",
     "simple-git-hooks": "^2.9.0",
     "simple-open-url": "^3.0.1",
