--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,7 @@
 strict-peer-dependencies=false
 shamefully-hoist=true
 ignore-workspace-root-check=true
+shell-emulator=true
 
 #git-checks=false
 registry=https://registry.npmmirror.com/
