--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --shims --clean --dts",
     "stub": "tsup src/index.ts --format esm",
-    "lint": "pnpm run stub && eslint .",
-    "lint:fix": "eslint . --fix",
     "postpublish": "simple-open-url https://npmmirror.com/package/@lincy/eslint-config",
     "prepublishOnly": "nr build",
     "release": "bumpp && npm publish -r --access public",
     "test": "vitest",
-    "typecheck": "tsc --noEmit",
+    "lint": "pnpm run stub && eslint .",
+    "lint:fix": "eslint . --fix",
+    "lint:ts": "tsc --noEmit",
     "prepare": "sh simple-git-hooks.sh"
   },
   "peerDependencies": {
@@ -40,18 +40,19 @@
   },
   "dependencies": {
     "@antfu/eslint-define-config": "1.23.0-2",
-    "@stylistic/eslint-plugin": "1.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
+    "@stylistic/eslint-plugin": "1.2.0",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
     "eslint-config-flat-gitignore": "^0.1.1",
     "eslint-plugin-antfu": "^1.0.2",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-i": "^2.29.0",
-    "eslint-plugin-jsdoc": "^46.8.2",
+    "eslint-plugin-jsdoc": "^46.9.0",
     "eslint-plugin-jsonc": "^2.10.0",
     "eslint-plugin-markdown": "^3.0.1",
-    "eslint-plugin-n": "^16.2.0",
+    "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-no-only-tests": "^3.1.0",
+    "eslint-plugin-perfectionist": "^2.3.0",
     "eslint-plugin-sort-keys": "^2.3.5",
     "eslint-plugin-unicorn": "^49.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
@@ -65,16 +66,19 @@
     "yaml-eslint-parser": "^1.2.2"
   },
   "devDependencies": {
-    "@antfu/ni": "^0.21.8",
+    "@antfu/ni": "^0.21.9",
+    "@eslint-types/jsdoc": "46.8.2-1",
+    "@eslint-types/typescript-eslint": "^6.9.1",
+    "@eslint-types/unicorn": "^49.0.0",
     "@lincy/eslint-config": "workspace:*",
-    "@stylistic/eslint-plugin-migrate": "^1.0.0",
-    "@types/eslint": "^8.44.6",
-    "@types/node": "^20.8.10",
+    "@stylistic/eslint-plugin-migrate": "^1.2.0",
+    "@types/eslint": "^8.44.7",
+    "@types/node": "^20.9.0",
     "bumpp": "^9.2.0",
-    "eslint": "^8.52.0",
-    "eslint-flat-config-viewer": "^0.1.0",
-    "esno": "^0.17.0",
-    "lint-staged": "^15.0.2",
+    "eslint": "^8.53.0",
+    "eslint-flat-config-viewer": "^0.1.1",
+    "esno": "^4.0.0",
+    "lint-staged": "^15.1.0",
     "rimraf": "^5.0.5",
     "simple-git-hooks": "^2.9.0",
     "simple-open-url": "^3.0.1",
