--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
   },
   "dependencies": {
     "@antfu/eslint-define-config": "1.23.0-2",
-    "@stylistic/eslint-plugin": "1.2.0",
+    "@stylistic/eslint-plugin": "1.4.0",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "eslint-config-flat-gitignore": "^0.1.1",
-    "eslint-plugin-antfu": "^1.0.9",
+    "eslint-plugin-antfu": "^1.0.10",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-i": "^2.29.0",
     "eslint-plugin-jsdoc": "^46.9.0",
@@ -52,10 +52,12 @@
     "eslint-plugin-markdown": "^3.0.1",
     "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-no-only-tests": "^3.1.0",
-    "eslint-plugin-perfectionist": "^2.3.0",
+    "eslint-plugin-perfectionist": "^2.4.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unicorn": "^49.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "eslint-plugin-vitest": "^0.3.9",
+    "eslint-plugin-vitest": "^0.3.10",
     "eslint-plugin-vue": "^9.18.1",
     "eslint-plugin-yml": "^1.10.0",
     "globals": "^13.23.0",
@@ -66,23 +68,23 @@
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.9",
-    "@eslint-types/jsdoc": "46.8.2-1",
-    "@eslint-types/typescript-eslint": "^6.9.1",
+    "@eslint-types/jsdoc": "46.9.0",
+    "@eslint-types/typescript-eslint": "^6.11.0",
     "@eslint-types/unicorn": "^49.0.0",
     "@lincy/eslint-config": "workspace:*",
-    "@stylistic/eslint-plugin-migrate": "^1.2.0",
+    "@stylistic/eslint-plugin-migrate": "^1.4.0",
     "@types/eslint": "^8.44.7",
-    "@types/node": "^20.9.0",
+    "@types/node": "^20.9.2",
     "bumpp": "^9.2.0",
-    "eslint": "^8.53.0",
-    "eslint-flat-config-viewer": "^0.1.1",
+    "eslint": "^8.54.0",
+    "eslint-flat-config-viewer": "^0.1.3",
     "esno": "^4.0.0",
     "lint-staged": "^15.1.0",
     "rimraf": "^5.0.5",
     "simple-git-hooks": "^2.9.0",
     "simple-open-url": "^3.0.1",
     "sucrase": "^3.34.0",
-    "tsup": "^7.2.0",
+    "tsup": "^8.0.0",
     "typescript": "^5.2.2",
     "unbuild": "^2.0.0",
     "vitest": "^0.34.6"
