--- a/package.json
+++ b/package.json
@@ -36,15 +36,34 @@
     "prepare": "sh simple-git-hooks.sh"
   },
   "peerDependencies": {
-    "eslint": ">=8.0.0"
+    "@unocss/eslint-plugin": ">=0.50.0",
+    "eslint": ">=8.40.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.4"
+  },
+  "peerDependenciesMeta": {
+    "@unocss/eslint-plugin": {
+      "optional": true
+    },
+    "eslint-plugin-react": {
+      "optional": true
+    },
+    "eslint-plugin-react-hooks": {
+      "optional": true
+    },
+    "eslint-plugin-react-refresh": {
+      "optional": true
+    }
   },
   "dependencies": {
     "@antfu/eslint-define-config": "1.23.0-2",
-    "@stylistic/eslint-plugin": "1.4.0",
+    "@antfu/install-pkg": "^0.3.0",
+    "@stylistic/eslint-plugin": "1.4.1",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "eslint-config-flat-gitignore": "^0.1.1",
-    "eslint-plugin-antfu": "^1.0.10",
+    "eslint-plugin-antfu": "^1.0.11",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-i": "^2.29.0",
     "eslint-plugin-jsdoc": "^46.9.0",
@@ -52,9 +71,7 @@
     "eslint-plugin-markdown": "^3.0.1",
     "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-no-only-tests": "^3.1.0",
-    "eslint-plugin-perfectionist": "^2.4.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-perfectionist": "^2.4.2",
     "eslint-plugin-unicorn": "^49.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "eslint-plugin-vitest": "^0.3.10",
@@ -63,6 +80,7 @@
     "globals": "^13.23.0",
     "jsonc-eslint-parser": "^2.4.0",
     "local-pkg": "^0.5.0",
+    "prompts": "^2.4.2",
     "vue-eslint-parser": "^9.3.2",
     "yaml-eslint-parser": "^1.2.2"
   },
@@ -72,9 +90,10 @@
     "@eslint-types/typescript-eslint": "^6.12.0",
     "@eslint-types/unicorn": "^49.0.0",
     "@lincy/eslint-config": "workspace:*",
-    "@stylistic/eslint-plugin-migrate": "^1.4.0",
+    "@stylistic/eslint-plugin-migrate": "^1.4.1",
     "@types/eslint": "^8.44.7",
-    "@types/node": "^20.9.4",
+    "@types/node": "^20.10.0",
+    "@types/prompts": "^2.4.9",
     "bumpp": "^9.2.0",
     "eslint": "^8.54.0",
     "eslint-flat-config-viewer": "^0.1.3",
