--- a/package.json
+++ b/package.json
@@ -94,9 +94,13 @@
     "@types/eslint": "^8.44.7",
     "@types/node": "^20.10.0",
     "@types/prompts": "^2.4.9",
+    "@unocss/eslint-plugin": "^0.57.7",
     "bumpp": "^9.2.0",
     "eslint": "^8.54.0",
     "eslint-flat-config-viewer": "^0.1.3",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.4",
     "esno": "^4.0.0",
     "lint-staged": "^15.1.0",
     "rimraf": "^5.0.5",
