--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --shims --clean --dts",
     "stub": "tsup src/index.ts --format esm",
+    "watch": "tsup --format esm,cjs --watch",
     "postpublish": "simple-open-url https://npmmirror.com/package/@lincy/eslint-config",
     "prepublishOnly": "nr build",
     "release": "bumpp && npm publish -r --access public",
@@ -58,12 +59,12 @@
   },
   "dependencies": {
     "@antfu/eslint-define-config": "1.23.0-2",
-    "@antfu/install-pkg": "^0.3.0",
+    "@antfu/install-pkg": "^0.3.1",
     "@stylistic/eslint-plugin": "1.4.1",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "eslint-config-flat-gitignore": "^0.1.1",
-    "eslint-plugin-antfu": "^1.0.11",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
+    "eslint-config-flat-gitignore": "^0.1.2",
+    "eslint-plugin-antfu": "^1.0.13",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-i": "^2.29.0",
     "eslint-plugin-jsdoc": "^46.9.0",
@@ -71,11 +72,11 @@
     "eslint-plugin-markdown": "^3.0.1",
     "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-no-only-tests": "^3.1.0",
-    "eslint-plugin-perfectionist": "^2.4.2",
+    "eslint-plugin-perfectionist": "^2.5.0",
     "eslint-plugin-unicorn": "^49.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "eslint-plugin-vitest": "^0.3.10",
-    "eslint-plugin-vue": "^9.18.1",
+    "eslint-plugin-vue": "^9.19.2",
     "eslint-plugin-yml": "^1.10.0",
     "globals": "^13.23.0",
     "jsonc-eslint-parser": "^2.4.0",
@@ -85,22 +86,22 @@
     "yaml-eslint-parser": "^1.2.2"
   },
   "devDependencies": {
-    "@antfu/ni": "^0.21.10",
+    "@antfu/ni": "^0.21.12",
     "@eslint-types/jsdoc": "46.9.0",
     "@eslint-types/typescript-eslint": "^6.12.0",
     "@eslint-types/unicorn": "^49.0.0",
     "@lincy/eslint-config": "workspace:*",
     "@stylistic/eslint-plugin-migrate": "^1.4.1",
-    "@types/eslint": "^8.44.7",
-    "@types/node": "^20.10.0",
+    "@types/eslint": "^8.44.8",
+    "@types/node": "^20.10.2",
     "@types/prompts": "^2.4.9",
     "@unocss/eslint-plugin": "^0.57.7",
     "bumpp": "^9.2.0",
-    "eslint": "^8.54.0",
+    "eslint": "^8.55.0",
     "eslint-flat-config-viewer": "^0.1.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "esno": "^4.0.0",
     "lint-staged": "^15.1.0",
     "rimraf": "^5.0.5",
