--- a/package.json
+++ b/package.json
@@ -39,12 +39,16 @@
   "peerDependencies": {
     "@unocss/eslint-plugin": ">=0.50.0",
     "eslint": ">=8.40.0",
+    "eslint-plugin-format": ">=0.1.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4"
   },
   "peerDependenciesMeta": {
     "@unocss/eslint-plugin": {
+      "optional": true
+    },
+    "eslint-plugin-format": {
       "optional": true
     },
     "eslint-plugin-react": {
@@ -60,11 +64,11 @@
   "dependencies": {
     "@antfu/eslint-define-config": "1.23.0-2",
     "@antfu/install-pkg": "^0.3.1",
-    "@stylistic/eslint-plugin": "1.4.1",
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
+    "@stylistic/eslint-plugin": "1.5.0-beta.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
     "eslint-config-flat-gitignore": "^0.1.2",
-    "eslint-plugin-antfu": "^1.0.13",
+    "eslint-plugin-antfu": "^2.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-i": "^2.29.0",
     "eslint-plugin-jsdoc": "^46.9.0",
@@ -93,17 +97,19 @@
     "@lincy/eslint-config": "workspace:*",
     "@stylistic/eslint-plugin-migrate": "^1.4.1",
     "@types/eslint": "^8.44.8",
-    "@types/node": "^20.10.2",
+    "@types/node": "^20.10.3",
     "@types/prompts": "^2.4.9",
-    "@unocss/eslint-plugin": "^0.57.7",
+    "@unocss/eslint-plugin": "^0.58.0",
     "bumpp": "^9.2.0",
     "eslint": "^8.55.0",
     "eslint-flat-config-viewer": "^0.1.3",
+    "eslint-plugin-format": "^0.1.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "esno": "^4.0.0",
-    "lint-staged": "^15.1.0",
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.1.0",
     "rimraf": "^5.0.5",
     "simple-git-hooks": "^2.9.0",
     "simple-open-url": "^3.0.1",
@@ -111,7 +117,7 @@
     "tsup": "^8.0.1",
     "typescript": "^5.3.2",
     "unbuild": "^2.0.0",
-    "vitest": "^0.34.6"
+    "vitest": "^1.0.1"
   },
   "pnpm": {
     "peerDependencyRules": {
