--- a/package.json
+++ b/package.json
@@ -64,10 +64,12 @@
   "dependencies": {
     "@antfu/eslint-define-config": "1.23.0-2",
     "@antfu/install-pkg": "^0.3.1",
-    "@stylistic/eslint-plugin": "1.5.0-beta.0",
+    "@stylistic/eslint-plugin": "1.5.0",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "eslint-config-flat-gitignore": "^0.1.2",
+    "eslint-merge-processors": "^0.1.0",
+    "eslint-parser-plain": "^0.1.0",
     "eslint-plugin-antfu": "^2.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-i": "^2.29.0",
@@ -82,6 +84,7 @@
     "eslint-plugin-vitest": "^0.3.10",
     "eslint-plugin-vue": "^9.19.2",
     "eslint-plugin-yml": "^1.10.0",
+    "eslint-processor-vue-blocks": "^0.1.1",
     "globals": "^13.23.0",
     "jsonc-eslint-parser": "^2.4.0",
     "local-pkg": "^0.5.0",
@@ -95,9 +98,9 @@
     "@eslint-types/typescript-eslint": "^6.12.0",
     "@eslint-types/unicorn": "^49.0.0",
     "@lincy/eslint-config": "workspace:*",
-    "@stylistic/eslint-plugin-migrate": "^1.4.1",
+    "@stylistic/eslint-plugin-migrate": "^1.5.0",
     "@types/eslint": "^8.44.8",
-    "@types/node": "^20.10.3",
+    "@types/node": "^20.10.4",
     "@types/prompts": "^2.4.9",
     "@unocss/eslint-plugin": "^0.58.0",
     "bumpp": "^9.2.0",
@@ -115,9 +118,10 @@
     "simple-open-url": "^3.0.1",
     "sucrase": "^3.34.0",
     "tsup": "^8.0.1",
-    "typescript": "^5.3.2",
+    "typescript": "^5.3.3",
     "unbuild": "^2.0.0",
-    "vitest": "^1.0.1"
+    "vitest": "^1.0.2",
+    "vue": "^3.3.10"
   },
   "pnpm": {
     "peerDependencyRules": {
