--- a/package.json
+++ b/package.json
@@ -64,9 +64,9 @@
   "dependencies": {
     "@antfu/eslint-define-config": "1.23.0-2",
     "@antfu/install-pkg": "^0.3.1",
-    "@stylistic/eslint-plugin": "1.5.0",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
+    "@stylistic/eslint-plugin": "1.5.1",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "eslint-config-flat-gitignore": "^0.1.2",
     "eslint-merge-processors": "^0.1.0",
     "eslint-parser-plain": "^0.1.0",
@@ -76,19 +76,21 @@
     "eslint-plugin-jsdoc": "^46.9.0",
     "eslint-plugin-jsonc": "^2.10.0",
     "eslint-plugin-markdown": "^3.0.1",
-    "eslint-plugin-n": "^16.3.1",
+    "eslint-plugin-n": "^16.4.0",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-perfectionist": "^2.5.0",
+    "eslint-plugin-toml": "^0.7.1",
     "eslint-plugin-unicorn": "^49.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "eslint-plugin-vitest": "^0.3.10",
+    "eslint-plugin-vitest": "^0.3.16",
     "eslint-plugin-vue": "^9.19.2",
     "eslint-plugin-yml": "^1.10.0",
     "eslint-processor-vue-blocks": "^0.1.1",
-    "globals": "^13.23.0",
+    "globals": "^13.24.0",
     "jsonc-eslint-parser": "^2.4.0",
     "local-pkg": "^0.5.0",
     "prompts": "^2.4.2",
+    "toml-eslint-parser": "^0.9.3",
     "vue-eslint-parser": "^9.3.2",
     "yaml-eslint-parser": "^1.2.2"
   },
@@ -98,12 +100,12 @@
     "@eslint-types/typescript-eslint": "^6.12.0",
     "@eslint-types/unicorn": "^49.0.0",
     "@lincy/eslint-config": "workspace:*",
-    "@stylistic/eslint-plugin-migrate": "^1.5.0",
+    "@stylistic/eslint-plugin-migrate": "^1.5.1",
     "@types/eslint": "^8.44.8",
     "@types/node": "^20.10.4",
     "@types/prompts": "^2.4.9",
     "@unocss/eslint-plugin": "^0.58.0",
-    "bumpp": "^9.2.0",
+    "bumpp": "^9.2.1",
     "eslint": "^8.55.0",
     "eslint-flat-config-viewer": "^0.1.3",
     "eslint-plugin-format": "^0.1.0",
@@ -112,7 +114,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "esno": "^4.0.0",
     "lint-staged": "^15.2.0",
-    "prettier": "^3.1.0",
+    "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
     "simple-git-hooks": "^2.9.0",
     "simple-open-url": "^3.0.1",
@@ -120,8 +122,8 @@
     "tsup": "^8.0.1",
     "typescript": "^5.3.3",
     "unbuild": "^2.0.0",
-    "vitest": "^1.0.2",
-    "vue": "^3.3.10"
+    "vitest": "^1.0.4",
+    "vue": "^3.3.11"
   },
   "pnpm": {
     "peerDependencyRules": {
