--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --shims --clean --dts",
+    "build": "nr typegen && tsup --format esm,cjs --clean --dts",
     "stub": "tsup src/index.ts --format esm",
     "watch": "tsup --format esm,cjs --watch",
     "postpublish": "simple-open-url https://npmmirror.com/package/@lincy/eslint-config",
     "prepublishOnly": "nr build",
     "release": "bumpp && npm publish -r --access public",
     "test": "vitest",
+    "typegen": "esno scripts/typegen.ts",
     "lint": "pnpm run stub && eslint .",
     "lint:fix": "eslint . --fix",
     "lint:ts": "tsc --noEmit",
@@ -63,17 +64,18 @@
   },
   "dependencies": {
     "@antfu/eslint-define-config": "1.23.0-2",
-    "@antfu/install-pkg": "^0.3.1",
+    "@antfu/install-pkg": "^0.3.2",
     "@stylistic/eslint-plugin": "1.7.0",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
     "eslint-config-flat-gitignore": "^0.1.3",
+    "eslint-flat-config-utils": "^0.1.2",
     "eslint-merge-processors": "^0.1.0",
     "eslint-parser-plain": "^0.1.0",
     "eslint-plugin-antfu": "^2.1.2",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import-x": "^0.4.4",
-    "eslint-plugin-jsdoc": "^48.2.1",
+    "eslint-plugin-jsdoc": "^48.2.2",
     "eslint-plugin-jsonc": "^2.14.1",
     "eslint-plugin-markdown": "^4.0.1",
     "eslint-plugin-n": "^16.6.2",
@@ -104,14 +106,15 @@
     "@types/eslint": "^8.56.6",
     "@types/node": "^20.11.30",
     "@types/prompts": "^2.4.9",
-    "@unocss/eslint-plugin": "^0.58.7",
+    "@unocss/eslint-plugin": "^0.58.8",
     "bumpp": "^9.4.0",
     "eslint": "^8.57.0",
-    "eslint-flat-config-viewer": "^0.1.14",
+    "eslint-flat-config-viewer": "^0.1.17",
     "eslint-plugin-format": "^0.1.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-typegen": "^0.1.6",
     "esno": "^4.7.0",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
