--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   ],
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     }
@@ -66,27 +65,27 @@
     "@antfu/eslint-define-config": "1.23.0-2",
     "@antfu/install-pkg": "^0.3.2",
     "@stylistic/eslint-plugin": "1.7.0",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
     "eslint-config-flat-gitignore": "^0.1.3",
-    "eslint-flat-config-utils": "^0.1.2",
+    "eslint-flat-config-utils": "^0.2.0",
     "eslint-merge-processors": "^0.1.0",
     "eslint-parser-plain": "^0.1.0",
     "eslint-plugin-antfu": "^2.1.2",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import-x": "^0.4.4",
+    "eslint-plugin-import-x": "^0.5.0",
     "eslint-plugin-jsdoc": "^48.2.2",
-    "eslint-plugin-jsonc": "^2.14.1",
+    "eslint-plugin-jsonc": "^2.15.0",
     "eslint-plugin-markdown": "^4.0.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-perfectionist": "^2.7.0",
-    "eslint-plugin-toml": "^0.10.0",
+    "eslint-plugin-toml": "^0.11.0",
     "eslint-plugin-unicorn": "^51.0.1",
     "eslint-plugin-unused-imports": "^3.1.0",
-    "eslint-plugin-vitest": "^0.4.0",
+    "eslint-plugin-vitest": "^0.4.1",
     "eslint-plugin-vue": "^9.24.0",
-    "eslint-plugin-yml": "^1.13.2",
+    "eslint-plugin-yml": "^1.14.0",
     "eslint-processor-vue-blocks": "^0.1.1",
     "globals": "^15.0.0",
     "jsonc-eslint-parser": "^2.4.0",
@@ -101,20 +100,20 @@
     "@eslint-types/jsdoc": "48.2.1",
     "@eslint-types/typescript-eslint": "^7.2.0",
     "@eslint-types/unicorn": "^51.0.1",
+    "@eslint/config-inspector": "^0.2.1",
     "@lincy/eslint-config": "workspace:*",
     "@stylistic/eslint-plugin-migrate": "^1.7.0",
-    "@types/eslint": "^8.56.6",
-    "@types/node": "^20.11.30",
+    "@types/eslint": "^8.56.7",
+    "@types/node": "^20.12.2",
     "@types/prompts": "^2.4.9",
     "@unocss/eslint-plugin": "^0.58.8",
     "bumpp": "^9.4.0",
     "eslint": "^8.57.0",
-    "eslint-flat-config-viewer": "^0.1.17",
     "eslint-plugin-format": "^0.1.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "eslint-typegen": "^0.1.6",
+    "eslint-typegen": "^0.2.0",
     "esno": "^4.7.0",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
