--- a/package.json
+++ b/package.json
@@ -37,21 +37,21 @@
     "prepare": "npx simple-git-hooks"
   },
   "peerDependencies": {
+    "@eslint-react/eslint-plugin": "^7.33.2",
     "@unocss/eslint-plugin": ">=0.50.0",
     "eslint": ">=8.40.0",
     "eslint-plugin-format": ">=0.1.0",
-    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4"
   },
   "peerDependenciesMeta": {
+    "@eslint-react/eslint-plugin": {
+      "optional": true
+    },
     "@unocss/eslint-plugin": {
       "optional": true
     },
     "eslint-plugin-format": {
-      "optional": true
-    },
-    "eslint-plugin-react": {
       "optional": true
     },
     "eslint-plugin-react-hooks": {
@@ -64,9 +64,9 @@
   "dependencies": {
     "@antfu/eslint-define-config": "1.23.0-2",
     "@antfu/install-pkg": "^0.3.2",
-    "@stylistic/eslint-plugin": "1.7.0",
-    "@typescript-eslint/eslint-plugin": "^7.6.0",
-    "@typescript-eslint/parser": "^7.6.0",
+    "@stylistic/eslint-plugin": "1.7.2",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
     "eslint-config-flat-gitignore": "^0.1.5",
     "eslint-flat-config-utils": "^0.2.3",
     "eslint-merge-processors": "^0.1.0",
@@ -86,7 +86,7 @@
     "eslint-plugin-vitest": "^0.5.3",
     "eslint-plugin-vue": "^9.25.0",
     "eslint-plugin-yml": "^1.14.0",
-    "eslint-processor-vue-blocks": "^0.1.1",
+    "eslint-processor-vue-blocks": "^0.1.2",
     "globals": "^15.0.0",
     "jsonc-eslint-parser": "^2.4.0",
     "local-pkg": "^0.5.0",
@@ -97,26 +97,27 @@
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.12",
+    "@eslint-react/eslint-plugin": "^1.5.9",
     "@eslint-types/jsdoc": "48.2.2",
     "@eslint-types/typescript-eslint": "^7.5.0",
     "@eslint-types/unicorn": "^52.0.0",
-    "@eslint/config-inspector": "^0.4.6",
+    "@eslint/config-inspector": "^0.4.7",
     "@lincy/eslint-config": "workspace:*",
-    "@stylistic/eslint-plugin-migrate": "^1.7.0",
-    "@types/eslint": "^8.56.9",
+    "@stylistic/eslint-plugin-migrate": "^1.7.2",
+    "@types/eslint": "^8.56.10",
     "@types/node": "^20.12.7",
     "@types/prompts": "^2.4.9",
-    "@unocss/eslint-plugin": "^0.59.2",
+    "@unocss/eslint-plugin": "^0.59.4",
     "bumpp": "^9.4.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-format": "^0.1.0",
-    "eslint-plugin-react": "^7.34.1",
+    "eslint": "^9.1.1",
+    "eslint-plugin-format": "^0.1.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "eslint-typegen": "^0.2.2",
+    "eslint-typegen": "^0.2.4",
     "esno": "^4.7.0",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
+    "react": "^18.2.0",
     "rimraf": "^5.0.5",
     "simple-git-hooks": "^2.11.1",
     "simple-open-url": "^3.0.1",
@@ -125,7 +126,7 @@
     "typescript": "^5.4.5",
     "unbuild": "^2.0.0",
     "vitest": "^1.5.0",
-    "vue": "^3.4.21"
+    "vue": "^3.4.24"
   },
   "pnpm": {
     "peerDependencyRules": {
