chore: 更新brace-style样式

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,8 +41,10 @@
     "jsonc",
     "yaml",
     "toml",
-    "scss",
     "css",
-    "less"
+    "less",
+    "scss",
+    "pcss",
+    "postcss"
   ]
 }
