--- a/package.json
+++ b/package.json
@@ -110,10 +110,11 @@
     "@types/prompts": "^2.4.9",
     "@unocss/eslint-plugin": "^0.60.3",
     "bumpp": "^9.4.1",
-    "eslint": "^9.3.0",
+    "eslint": "npm:eslint-ts-patch@9.2.0-6",
     "eslint-plugin-format": "^0.1.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "eslint-ts-patch": "9.2.0-6",
     "eslint-typegen": "^0.2.4",
     "esno": "^4.7.0",
     "lint-staged": "^15.2.5",
