--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,11 @@
     "jsonc",
     "yaml",
     "toml",
+    "xml",
+    "gql",
+    "graphql",
+    "astro",
+    "svelte",
     "css",
     "less",
     "scss",
