--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "@eslint-react/eslint-plugin": {
       "optional": true
     },
+    "@prettier/plugin-xml": {
+      "optional": true
+    },
     "@unocss/eslint-plugin": {
       "optional": true
     },
@@ -63,18 +66,19 @@
   },
   "dependencies": {
     "@antfu/eslint-define-config": "1.23.0-2",
-    "@antfu/install-pkg": "^0.4.0",
+    "@antfu/install-pkg": "^0.4.1",
+    "@clack/prompts": "^0.7.0",
     "@eslint-community/eslint-plugin-eslint-comments": "^4.4.0",
     "@stylistic/eslint-plugin": "2.6.4",
-    "@typescript-eslint/eslint-plugin": "8.2.0",
-    "@typescript-eslint/parser": "8.2.0",
-    "@vitest/eslint-plugin": "^1.0.3",
+    "@typescript-eslint/eslint-plugin": "8.3.0",
+    "@typescript-eslint/parser": "8.3.0",
+    "@vitest/eslint-plugin": "^1.0.5",
     "eslint-config-flat-gitignore": "^0.1.8",
     "eslint-flat-config-utils": "^0.3.1",
     "eslint-merge-processors": "^0.1.0",
     "eslint-parser-plain": "^0.1.0",
-    "eslint-plugin-antfu": "^2.3.5",
-    "eslint-plugin-import-x": "^3.1.0",
+    "eslint-plugin-antfu": "^2.3.6",
+    "eslint-plugin-import-x": "^4.0.0",
     "eslint-plugin-jsdoc": "^50.2.2",
     "eslint-plugin-jsonc": "^2.16.0",
     "eslint-plugin-markdown": "^5.1.0",
@@ -97,23 +101,24 @@
     "yaml-eslint-parser": "^1.2.3"
   },
   "devDependencies": {
-    "@antfu/ni": "^0.22.4",
-    "@eslint-react/eslint-plugin": "^1.12.0",
+    "@antfu/ni": "^0.23.0",
+    "@eslint-react/eslint-plugin": "^1.12.1",
     "@eslint-types/jsdoc": "48.2.2",
     "@eslint-types/typescript-eslint": "^7.5.0",
     "@eslint-types/unicorn": "^52.0.0",
     "@eslint/config-inspector": "^0.5.4",
     "@lincy/eslint-config": "workspace:*",
+    "@prettier/plugin-xml": "^3.4.1",
     "@stylistic/eslint-plugin-migrate": "^2.6.4",
-    "@types/eslint": "^9.6.0",
+    "@types/eslint": "^9.6.1",
     "@types/node": "^22.5.0",
     "@types/prompts": "^2.4.9",
-    "@unocss/eslint-plugin": "^0.62.2",
-    "bumpp": "^9.5.1",
-    "eslint": "9.9.0",
+    "@unocss/eslint-plugin": "^0.62.3",
+    "bumpp": "^9.5.2",
+    "eslint": "9.9.1",
     "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.10",
+    "eslint-plugin-react-refresh": "^0.4.11",
     "eslint-ts-patch": "9.8.0-1",
     "eslint-typegen": "^0.3.1",
     "esno": "^4.7.0",
@@ -136,6 +141,12 @@
         "prettier"
       ]
     }
+  },
+  "resolutions": {
+    "@eslint-community/eslint-utils": "^4.4.0",
+    "@typescript-eslint/utils": "^8.3.0",
+    "eslint": "^9.9.1",
+    "tsx": "^4.18.0"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
