--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@lincy/eslint-config",
   "type": "module",
   "version": "5.2.7",
-  "packageManager": "pnpm@9.12.3",
+  "packageManager": "pnpm@9.13.2",
   "description": "LinCenYing's ESLint config",
   "author": "LinCenYing <lincenying@gmail.com> (https://github.com/lincenying/)",
   "license": "MIT",
@@ -68,29 +68,29 @@
   "dependencies": {
     "@antfu/eslint-define-config": "1.23.0-2",
     "@antfu/install-pkg": "^0.4.1",
-    "@clack/prompts": "^0.7.0",
+    "@clack/prompts": "^0.8.1",
     "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
     "@eslint/markdown": "^6.2.1",
     "@stylistic/eslint-plugin": "2.10.1",
     "@typescript-eslint/eslint-plugin": "8.13.0",
     "@typescript-eslint/parser": "8.13.0",
-    "@vitest/eslint-plugin": "^1.1.8",
+    "@vitest/eslint-plugin": "^1.1.10",
     "eslint-config-flat-gitignore": "^0.3.0",
     "eslint-flat-config-utils": "^0.4.0",
     "eslint-merge-processors": "^0.1.0",
     "eslint-parser-plain": "^0.1.0",
     "eslint-plugin-antfu": "^2.7.0",
-    "eslint-plugin-import-x": "^4.4.0",
-    "eslint-plugin-jsdoc": "^50.4.3",
-    "eslint-plugin-jsonc": "^2.18.1",
-    "eslint-plugin-n": "^17.13.1",
+    "eslint-plugin-import-x": "^4.4.2",
+    "eslint-plugin-jsdoc": "^50.5.0",
+    "eslint-plugin-jsonc": "^2.18.2",
+    "eslint-plugin-n": "^17.13.2",
     "eslint-plugin-no-only-tests": "^3.3.0",
     "eslint-plugin-perfectionist": "^3.9.1",
-    "eslint-plugin-regexp": "^2.6.0",
+    "eslint-plugin-regexp": "^2.7.0",
     "eslint-plugin-toml": "^0.11.1",
     "eslint-plugin-unicorn": "^56.0.0",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "eslint-plugin-vue": "^9.30.0",
+    "eslint-plugin-vue": "^9.31.0",
     "eslint-plugin-yml": "^1.15.0",
     "eslint-processor-vue-blocks": "^0.1.2",
     "globals": "^15.12.0",
@@ -111,17 +111,19 @@
     "@lincy/eslint-config": "workspace:*",
     "@prettier/plugin-xml": "^3.4.1",
     "@stylistic/eslint-plugin-migrate": "^2.10.1",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.9.0",
     "@types/prompts": "^2.4.9",
-    "@unocss/eslint-plugin": "^0.64.0",
+    "@unocss/eslint-plugin": "^0.64.1",
     "bumpp": "^9.8.1",
-    "eslint": "^9.14.0",
+    "eslint": "^9.15.0",
     "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "eslint-ts-patch": "9.8.0-1",
     "eslint-typegen": "^0.3.2",
     "esno": "^4.8.0",
+    "fs-extra": "^11.2.0",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
@@ -132,8 +134,8 @@
     "tsup": "^8.3.5",
     "typescript": "^5.6.3",
     "unbuild": "^2.0.0",
-    "vitest": "^2.1.4",
-    "vue": "^3.5.12"
+    "vitest": "^2.1.5",
+    "vue": "^3.5.13"
   },
   "pnpm": {
     "peerDependencyRules": {
@@ -144,8 +146,8 @@
   },
   "resolutions": {
     "@eslint-community/eslint-utils": "^4.4.1",
-    "@typescript-eslint/utils": "^8.13.0",
-    "eslint": "^9.14.0",
+    "@typescript-eslint/utils": "^8.14.0",
+    "eslint": "^9.15.0",
     "tsx": "^4.19.2"
   },
   "simple-git-hooks": {
