--- a/fixtures/input/tsconfig.json
+++ b/fixtures/input/tsconfig.json
@@ -1,10 +1,24 @@
 {
   "compilerOptions": {
     "target": "ESNext",
+    "jsx": "react",
+    "baseUrl": ".",
     "module": "ESNext",
     "moduleResolution": "Bundler",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "strict": true,
+    "esModuleInterop": true,
     "skipDefaultLibCheck": true,
     "skipLibCheck": true
-  }
+  },
+  "include": [
+    "**/*.ts",
+    "**/*.js",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "./fixtures/**/*.*"
+  ]
 }
