--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@lincy/eslint-config",
   "type": "module",
   "version": "5.3.2",
-  "packageManager": "pnpm@9.15.0",
+  "packageManager": "pnpm@9.15.3",
   "description": "LinCenYing's ESLint config",
   "author": "LinCenYing <lincenying@gmail.com> (https://github.com/lincenying/)",
   "license": "MIT",
@@ -30,9 +30,9 @@
     "prepublishOnly": "nr build",
     "release": "bumpp && npm publish -r --access public",
     "test": "vitest",
-    "typegen": "esno scripts/typegen.ts",
-    "lint": "pnpm run stub && eslint . --flag unstable_ts_config",
-    "lint:fix": "eslint . --flag unstable_ts_config --fix",
+    "typegen": "tsx scripts/typegen.ts",
+    "lint": "pnpm run stub && eslint .",
+    "lint:fix": "eslint . --fix",
     "lint:ts": "tsc --noEmit",
     "prepare": "npx simple-git-hooks"
   },
@@ -67,64 +67,65 @@
   },
   "dependencies": {
     "@antfu/eslint-define-config": "1.23.0-2",
-    "@antfu/install-pkg": "^0.5.0",
-    "@clack/prompts": "^0.8.2",
+    "@antfu/install-pkg": "^1.0.0",
+    "@clack/prompts": "^0.9.1",
     "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
     "@eslint/markdown": "^6.2.1",
-    "@stylistic/eslint-plugin": "2.11.0",
-    "@typescript-eslint/eslint-plugin": "8.17.0",
-    "@typescript-eslint/parser": "8.17.0",
-    "@vitest/eslint-plugin": "^1.1.16",
-    "eslint-config-flat-gitignore": "^0.3.0",
-    "eslint-flat-config-utils": "^0.4.0",
-    "eslint-merge-processors": "^0.1.0",
-    "eslint-parser-plain": "^0.1.0",
+    "@stylistic/eslint-plugin": "^2.13.0",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
+    "@vitest/eslint-plugin": "^1.1.25",
+    "eslint-config-flat-gitignore": "^1.0.0",
+    "eslint-flat-config-utils": "^1.0.0",
+    "eslint-merge-processors": "^1.0.0",
+    "eslint-parser-plain": "^0.1.1",
     "eslint-plugin-antfu": "^2.7.0",
-    "eslint-plugin-import-x": "^4.5.0",
+    "eslint-plugin-import-x": "^4.6.1",
     "eslint-plugin-jsdoc": "^50.6.1",
     "eslint-plugin-jsonc": "^2.18.2",
-    "eslint-plugin-n": "^17.15.0",
+    "eslint-plugin-n": "^17.15.1",
     "eslint-plugin-no-only-tests": "^3.3.0",
-    "eslint-plugin-perfectionist": "^4.3.0",
+    "eslint-plugin-perfectionist": "^4.6.0",
     "eslint-plugin-regexp": "^2.7.0",
     "eslint-plugin-toml": "^0.12.0",
     "eslint-plugin-unicorn": "^56.0.1",
     "eslint-plugin-unused-imports": "^4.1.4",
     "eslint-plugin-vue": "^9.32.0",
     "eslint-plugin-yml": "^1.16.0",
-    "eslint-processor-vue-blocks": "^0.1.2",
-    "globals": "^15.13.0",
+    "eslint-processor-vue-blocks": "^1.0.0",
+    "globals": "^15.14.0",
     "jsonc-eslint-parser": "^2.4.0",
-    "local-pkg": "^0.5.1",
+    "local-pkg": "^1.0.0",
     "prompts": "^2.4.2",
     "toml-eslint-parser": "^0.10.0",
     "vue-eslint-parser": "^9.4.3",
     "yaml-eslint-parser": "^1.2.3"
   },
   "devDependencies": {
-    "@antfu/ni": "^0.23.1",
-    "@eslint-react/eslint-plugin": "^1.19.0",
+    "@antfu/ni": "^23.2.0",
+    "@eslint-react/eslint-plugin": "^1.23.2",
     "@eslint-types/jsdoc": "48.2.2",
     "@eslint-types/typescript-eslint": "^7.5.0",
     "@eslint-types/unicorn": "^52.0.0",
-    "@eslint/config-inspector": "^0.6.0",
+    "@eslint/config-inspector": "^0.7.1",
     "@lincy/eslint-config": "workspace:*",
     "@prettier/plugin-xml": "^3.4.1",
-    "@stylistic/eslint-plugin-migrate": "^2.12.1",
+    "@stylistic/eslint-plugin-migrate": "^2.13.0",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^22.10.2",
+    "@types/node": "^22.10.5",
     "@types/prompts": "^2.4.9",
-    "@unocss/eslint-plugin": "^0.65.1",
-    "bumpp": "^9.9.1",
-    "eslint": "^9.17.0",
-    "eslint-plugin-format": "^0.1.3",
+    "@types/react": "^19.0.6",
+    "@unocss/eslint-plugin": "^65.4.0",
+    "bumpp": "^9.10.0",
+    "eslint": "^9.18.0",
+    "eslint-plugin-format": "^1.0.1",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
+    "eslint-plugin-react-refresh": "^0.4.18",
     "eslint-ts-patch": "9.8.0-1",
-    "eslint-typegen": "^0.3.2",
+    "eslint-typegen": "^1.0.0",
     "esno": "^4.8.0",
     "fs-extra": "^11.2.0",
-    "lint-staged": "^15.2.11",
+    "lint-staged": "^15.3.0",
     "prettier": "^3.4.2",
     "react": "^19.0.0",
     "rimraf": "^6.0.1",
@@ -132,8 +133,8 @@
     "simple-open-url": "^3.0.1",
     "sucrase": "^3.35.0",
     "tsup": "^8.3.5",
-    "typescript": "^5.7.2",
-    "unbuild": "^3.0.1",
+    "typescript": "^5.7.3",
+    "unbuild": "^3.3.0",
     "vitest": "^2.1.8",
     "vue": "^3.5.13"
   },
@@ -146,15 +147,15 @@
   },
   "resolutions": {
     "@eslint-community/eslint-utils": "^4.4.1",
-    "@typescript-eslint/utils": "^8.18.0",
-    "eslint": "^9.17.0",
+    "@typescript-eslint/utils": "^8.19.1",
+    "eslint": "^9.18.0",
     "tsx": "^4.19.2"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
   },
   "lint-staged": {
-    "*.{[jt]s?(x),vue,md}": "eslint --fix --flag unstable_ts_config"
+    "*.{[jt]s?(x),vue,md}": "eslint --fix"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
