--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "ESNext",
+    "jsx": "react",
     "baseUrl": ".",
     "module": "ESNext",
     "moduleResolution": "Bundler",
@@ -9,12 +10,10 @@
     },
     "strict": true,
     "esModuleInterop": true,
+    "skipDefaultLibCheck": true,
     "skipLibCheck": true
   },
-  "include": [
-    "**/*.ts"
-  ],
   "exclude": [
-    "./fixtures/**/*.*"
+    "./fixtures/input/*.*"
   ]
 }
