--- a/package.json
+++ b/package.json
@@ -66,73 +66,72 @@
     }
   },
   "dependencies": {
-    "@antfu/install-pkg": "catalog:",
-    "@clack/prompts": "catalog:",
-    "@eslint-community/eslint-plugin-eslint-comments": "catalog:",
-    "@eslint/markdown": "catalog:",
-    "@stylistic/eslint-plugin": "catalog:",
-    "@typescript-eslint/eslint-plugin": "catalog:",
-    "@typescript-eslint/parser": "catalog:",
-    "@vitest/eslint-plugin": "catalog:",
-    "eslint-config-flat-gitignore": "catalog:",
-    "eslint-flat-config-utils": "catalog:",
-    "eslint-merge-processors": "catalog:",
-    "eslint-parser-plain": "catalog:",
-    "eslint-plugin-antfu": "catalog:",
-    "eslint-plugin-import-x": "catalog:",
-    "eslint-plugin-jsdoc": "catalog:",
-    "eslint-plugin-jsonc": "catalog:",
-    "eslint-plugin-n": "catalog:",
-    "eslint-plugin-no-only-tests": "catalog:",
-    "eslint-plugin-perfectionist": "catalog:",
-    "eslint-plugin-pnpm": "catalog:",
-    "eslint-plugin-regexp": "catalog:",
-    "eslint-plugin-toml": "catalog:",
-    "eslint-plugin-unicorn": "catalog:",
-    "eslint-plugin-unused-imports": "catalog:",
-    "eslint-plugin-vue": "catalog:",
-    "eslint-plugin-yml": "catalog:",
-    "eslint-processor-vue-blocks": "catalog:",
-    "globals": "catalog:",
-    "jsonc-eslint-parser": "catalog:",
-    "local-pkg": "catalog:",
-    "prompts": "catalog:",
-    "toml-eslint-parser": "catalog:",
-    "vue-eslint-parser": "catalog:",
-    "yaml-eslint-parser": "catalog:"
+    "@antfu/install-pkg": "catalog:prod",
+    "@clack/prompts": "catalog:prod",
+    "@eslint-community/eslint-plugin-eslint-comments": "catalog:prod",
+    "@eslint/markdown": "catalog:prod",
+    "@stylistic/eslint-plugin": "catalog:prod",
+    "@typescript-eslint/eslint-plugin": "catalog:prod",
+    "@typescript-eslint/parser": "catalog:prod",
+    "@vitest/eslint-plugin": "catalog:prod",
+    "eslint-config-flat-gitignore": "catalog:prod",
+    "eslint-flat-config-utils": "catalog:prod",
+    "eslint-merge-processors": "catalog:prod",
+    "eslint-parser-plain": "catalog:prod",
+    "eslint-plugin-antfu": "catalog:prod",
+    "eslint-plugin-import-x": "catalog:prod",
+    "eslint-plugin-jsdoc": "catalog:prod",
+    "eslint-plugin-jsonc": "catalog:prod",
+    "eslint-plugin-n": "catalog:prod",
+    "eslint-plugin-no-only-tests": "catalog:prod",
+    "eslint-plugin-perfectionist": "catalog:prod",
+    "eslint-plugin-pnpm": "catalog:prod",
+    "eslint-plugin-regexp": "catalog:prod",
+    "eslint-plugin-toml": "catalog:prod",
+    "eslint-plugin-unicorn": "catalog:prod",
+    "eslint-plugin-unused-imports": "catalog:prod",
+    "eslint-plugin-vue": "catalog:prod",
+    "eslint-plugin-yml": "catalog:prod",
+    "eslint-processor-vue-blocks": "catalog:prod",
+    "globals": "catalog:prod",
+    "jsonc-eslint-parser": "catalog:prod",
+    "local-pkg": "catalog:prod",
+    "prompts": "catalog:prod",
+    "toml-eslint-parser": "catalog:prod",
+    "vue-eslint-parser": "catalog:prod",
+    "yaml-eslint-parser": "catalog:prod"
   },
   "devDependencies": {
-    "@antfu/ni": "catalog:",
-    "@eslint-react/eslint-plugin": "catalog:",
-    "@eslint-types/jsdoc": "catalog:",
-    "@eslint-types/typescript-eslint": "catalog:",
-    "@eslint-types/unicorn": "catalog:",
-    "@eslint/config-inspector": "catalog:",
+    "@antfu/ni": "catalog:dev",
+    "@eslint-react/eslint-plugin": "catalog:dev",
+    "@eslint-types/jsdoc": "catalog:dev",
+    "@eslint-types/typescript-eslint": "catalog:dev",
+    "@eslint-types/unicorn": "catalog:dev",
+    "@eslint/config-inspector": "catalog:dev",
     "@lincy/eslint-config": "workspace:*",
-    "@prettier/plugin-xml": "catalog:",
-    "@stylistic/eslint-plugin-migrate": "catalog:",
-    "@types/node": "catalog:",
-    "@types/react": "catalog:",
-    "@unocss/eslint-plugin": "catalog:",
-    "bumpp": "catalog:",
-    "eslint": "catalog:",
-    "eslint-plugin-format": "catalog:",
-    "eslint-plugin-react-hooks": "catalog:",
-    "eslint-plugin-react-refresh": "catalog:",
-    "eslint-typegen": "catalog:",
-    "esno": "catalog:",
-    "lint-staged": "catalog:",
-    "prettier": "catalog:",
-    "react": "catalog:",
-    "simple-git-hooks": "catalog:",
-    "simple-open-url": "catalog:",
-    "sucrase": "catalog:",
-    "tinyglobby": "catalog:",
-    "tsup": "catalog:",
-    "typescript": "catalog:",
-    "unbuild": "catalog:",
-    "vitest": "catalog:",
-    "vue": "catalog:"
+    "@prettier/plugin-xml": "catalog:dev",
+    "@stylistic/eslint-plugin-migrate": "catalog:dev",
+    "@types/node": "catalog:dev",
+    "@types/react": "catalog:dev",
+    "@unocss/eslint-plugin": "catalog:dev",
+    "bumpp": "catalog:dev",
+    "eslint": "catalog:dev",
+    "eslint-plugin-format": "catalog:dev",
+    "eslint-plugin-react-hooks": "catalog:dev",
+    "eslint-plugin-react-refresh": "catalog:dev",
+    "eslint-typegen": "catalog:dev",
+    "esno": "catalog:dev",
+    "lint-staged": "catalog:dev",
+    "prettier": "catalog:dev",
+    "react": "catalog:dev",
+    "simple-git-hooks": "catalog:dev",
+    "simple-open-url": "catalog:dev",
+    "sucrase": "catalog:dev",
+    "tinyglobby": "catalog:dev",
+    "tsup": "catalog:dev",
+    "typescript": "catalog:dev",
+    "vitest": "catalog:test",
+    "vue": "catalog:dev"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
