--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,72 +6,78 @@ overrides:
   '@typescript-eslint/utils': ^8.26.0
   eslint: ^9.22.0
   tsx: ^4.19.3
-catalog:
-  '@antfu/install-pkg': ^1.0.0
-  '@antfu/ni': ^24.1.0
-  '@clack/prompts': ^0.10.0
-  '@eslint-community/eslint-plugin-eslint-comments': ^4.4.1
-  '@eslint-react/eslint-plugin': ^1.31.0
-  '@eslint-types/jsdoc': 48.2.2
-  '@eslint-types/typescript-eslint': ^7.5.0
-  '@eslint-types/unicorn': ^52.0.0
-  '@eslint/config-inspector': ^1.0.2
-  '@eslint/markdown': ^6.3.0
-  '@lincy/eslint-config': workspace:*
-  '@prettier/plugin-xml': ^3.4.1
-  '@stylistic/eslint-plugin': 4.0.0-beta.1
-  '@stylistic/eslint-plugin-migrate': ^4.2.0
-  '@types/node': ^22.13.10
-  '@types/react': ^19.0.10
-  '@typescript-eslint/eslint-plugin': ^8.26.0
-  '@typescript-eslint/parser': ^8.26.0
-  '@unocss/eslint-plugin': ^66.1.0-beta.3
-  '@vitest/eslint-plugin': ^1.1.36
-  bumpp: ^10.0.3
-  eslint: ^9.22.0
-  eslint-config-flat-gitignore: ^2.1.0
-  eslint-flat-config-utils: ^2.0.1
-  eslint-merge-processors: ^2.0.0
-  eslint-parser-plain: ^0.1.1
-  eslint-plugin-antfu: ^3.1.1
-  eslint-plugin-format: ^1.0.1
-  eslint-plugin-import-x: ^4.6.1
-  eslint-plugin-jsdoc: ^50.6.3
-  eslint-plugin-jsonc: ^2.19.1
-  eslint-plugin-n: ^17.16.2
-  eslint-plugin-no-only-tests: ^3.3.0
-  eslint-plugin-perfectionist: ^4.10.1
-  eslint-plugin-pnpm: ^0.1.2
-  eslint-plugin-react-hooks: ^5.2.0
-  eslint-plugin-react-refresh: ^0.4.19
-  eslint-plugin-regexp: ^2.7.0
-  eslint-plugin-toml: ^0.12.0
-  eslint-plugin-unicorn: 56.0.1
-  eslint-plugin-unused-imports: ^4.1.4
-  eslint-plugin-vue: ^10.0.0
-  eslint-plugin-yml: ^1.17.0
-  eslint-processor-vue-blocks: ^2.0.0
-  eslint-typegen: ^2.0.0
-  esno: ^4.8.0
-  globals: ^16.0.0
-  jsonc-eslint-parser: ^2.4.0
-  lint-staged: ^15.4.3
-  local-pkg: ^1.1.1
-  prettier: ^3.5.3
-  prompts: ^2.4.2
-  react: ^19.0.0
-  simple-git-hooks: ^2.11.1
-  simple-open-url: ^3.0.1
-  sucrase: ^3.35.0
-  tinyglobby: ^0.2.12
-  toml-eslint-parser: ^0.10.0
-  tsup: ^8.4.0
-  typescript: ^5.8.2
-  unbuild: ^3.5.0
-  vitest: ^3.0.8
-  vue: ^3.5.13
-  vue-eslint-parser: ^10.1.1
-  yaml-eslint-parser: ^1.3.0
+catalogs:
+  dev:
+    '@antfu/ni': ^24.1.0
+    '@eslint-react/eslint-plugin': ^1.31.0
+    '@eslint-types/jsdoc': 48.2.2
+    '@eslint-types/typescript-eslint': ^7.5.0
+    '@eslint-types/unicorn': ^52.0.0
+    '@eslint/config-inspector': ^1.0.2
+    '@lincy/eslint-config': workspace:*
+    '@prettier/plugin-xml': ^3.4.1
+    '@stylistic/eslint-plugin-migrate': ^4.2.0
+    '@types/node': ^22.13.10
+    '@types/react': ^19.0.10
+    '@unocss/eslint-plugin': ^66.1.0-beta.3
+    bumpp: ^10.0.3
+    eslint: ^9.22.0
+    eslint-plugin-format: ^1.0.1
+    eslint-plugin-react-hooks: ^5.2.0
+    eslint-plugin-react-refresh: ^0.4.19
+    eslint-ts-patch: 9.8.0-1
+    eslint-typegen: ^2.0.0
+    esno: ^4.8.0
+    lint-staged: ^15.4.3
+    prettier: ^3.5.3
+    react: ^19.0.0
+    simple-git-hooks: ^2.11.1
+    simple-open-url: ^3.0.1
+    sucrase: ^3.35.0
+    tinyglobby: ^0.2.12
+    tsup: ^8.4.0
+    typescript: ^5.8.2
+    vue: ^3.5.13
+
+  test:
+    vitest: ^3.0.8
+
+  prod:
+    '@antfu/eslint-define-config': 1.23.0-2
+    '@antfu/install-pkg': ^1.0.0
+    '@clack/prompts': ^0.10.0
+    '@eslint-community/eslint-plugin-eslint-comments': ^4.4.1
+    '@eslint/markdown': ^6.3.0
+    '@stylistic/eslint-plugin': 4.0.0-beta.1
+    '@typescript-eslint/eslint-plugin': ^8.26.1
+    '@typescript-eslint/parser': ^8.26.1
+    '@vitest/eslint-plugin': ^1.1.37
+    eslint-config-flat-gitignore: ^2.1.0
+    eslint-flat-config-utils: ^2.0.1
+    eslint-merge-processors: ^2.0.0
+    eslint-parser-plain: ^0.1.1
+    eslint-plugin-antfu: ^3.1.1
+    eslint-plugin-import-x: ^4.6.1
+    eslint-plugin-jsdoc: ^50.6.6
+    eslint-plugin-jsonc: ^2.19.1
+    eslint-plugin-n: ^17.16.2
+    eslint-plugin-no-only-tests: ^3.3.0
+    eslint-plugin-perfectionist: ^4.10.1
+    eslint-plugin-pnpm: ^0.1.2
+    eslint-plugin-regexp: ^2.7.0
+    eslint-plugin-toml: ^0.12.0
+    eslint-plugin-unicorn: 56.0.1
+    eslint-plugin-unused-imports: ^4.1.4
+    eslint-plugin-vue: ^10.0.0
+    eslint-plugin-yml: ^1.17.0
+    eslint-processor-vue-blocks: ^2.0.0
+    globals: ^16.0.0
+    jsonc-eslint-parser: ^2.4.0
+    local-pkg: ^1.1.1
+    prompts: ^2.4.2
+    toml-eslint-parser: ^0.10.0
+    vue-eslint-parser: ^10.1.1
+    yaml-eslint-parser: ^1.3.0
 peerDependencyRules:
   ignoreMissing:
     - prettier
