chore: update deps

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@lincy/eslint-config",
   "type": "module",
   "version": "5.5.0",
-  "packageManager": "pnpm@10.6.2",
+  "packageManager": "pnpm@10.6.3",
   "description": "LinCenYing's ESLint config",
   "author": "LinCenYing <lincenying@gmail.com> (https://github.com/lincenying/)",
   "license": "MIT",
@@ -108,7 +108,7 @@
     "@eslint-types/typescript-eslint": "catalog:dev",
     "@eslint-types/unicorn": "catalog:dev",
     "@eslint/config-inspector": "catalog:dev",
-    "@lincy/eslint-config": "catalog:dev",
+    "@lincy/eslint-config": "workspace:*",
     "@prettier/plugin-xml": "catalog:dev",
     "@stylistic/eslint-plugin-migrate": "catalog:dev",
     "@types/node": "catalog:dev",
