chore: update deps

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@lincy/eslint-config",
   "type": "module",
   "version": "5.5.2",
-  "packageManager": "pnpm@10.10.0",
+  "packageManager": "pnpm@10.11.0",
   "description": "LinCenYing's ESLint config",
   "author": "LinCenYing <lincenying@gmail.com> (https://github.com/lincenying/)",
   "license": "MIT",
@@ -120,6 +120,7 @@
     "eslint-plugin-react-refresh": "catalog:dev",
     "eslint-typegen": "catalog:dev",
     "esno": "catalog:dev",
+    "execa": "catalog:dev",
     "lint-staged": "catalog:dev",
     "prettier": "catalog:dev",
     "react": "catalog:dev",
