--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,28 +4,29 @@ packages:
 overrides:
   '@eslint-community/eslint-utils': ^4.7.0
   '@typescript-eslint/utils': ^8.32.1
-  eslint: ^9.26.0
+  eslint: ^9.27.0
   tsx: ^4.19.4
 
 catalogs:
   dev:
-    '@antfu/ni': ^24.3.0
+    '@antfu/ni': ^24.4.0
     '@eslint-react/eslint-plugin': ^1.49.0
     '@eslint-types/typescript-eslint': ^7.5.0
     '@eslint-types/unicorn': ^52.0.0
     '@eslint/config-inspector': ^1.0.2
     '@prettier/plugin-xml': ^3.4.1
     '@stylistic/eslint-plugin-migrate': ^4.2.0
-    '@types/node': ^22.15.17
+    '@types/node': ^22.15.21
     '@types/react': ^19.1.4
-    '@unocss/eslint-plugin': ^66.1.1
-    bumpp: ^10.1.0
-    eslint: ^9.26.0
+    '@unocss/eslint-plugin': ^66.1.2
+    bumpp: ^10.1.1
+    eslint: ^9.27.0
     eslint-plugin-format: ^1.0.1
     eslint-plugin-react-hooks: ^5.2.0
     eslint-plugin-react-refresh: ^0.4.20
     eslint-typegen: ^2.2.0
     esno: ^4.8.0
+    execa: ^9.5.3
     lint-staged: ^16.0.0
     prettier: ^3.5.3
     react: ^19.1.0
@@ -33,9 +34,9 @@ catalogs:
     simple-open-url: ^3.0.1
     sucrase: ^3.35.0
     tinyglobby: ^0.2.13
-    tsdown: ^0.11.7
+    tsdown: ^0.11.13
     typescript: ^5.8.3
-    vue: ^3.5.13
+    vue: ^3.5.14
   prod:
     '@antfu/install-pkg': ^1.1.0
     '@clack/prompts': ^0.10.1
@@ -44,15 +45,15 @@ catalogs:
     '@stylistic/eslint-plugin': ^4.2.0
     '@typescript-eslint/eslint-plugin': ^8.32.1
     '@typescript-eslint/parser': ^8.32.1
-    '@vitest/eslint-plugin': ^1.1.44
+    '@vitest/eslint-plugin': ^1.2.0
     eslint-config-flat-gitignore: ^2.1.0
-    eslint-flat-config-utils: ^2.0.1
+    eslint-flat-config-utils: ^2.1.0
     eslint-merge-processors: ^2.0.0
     eslint-parser-plain: ^0.1.1
     eslint-plugin-antfu: ^3.1.1
-    eslint-plugin-import-x: ^4.11.1
-    eslint-plugin-jsdoc: ^50.6.14
-    eslint-plugin-jsonc: ^2.20.0
+    eslint-plugin-import-x: ^4.12.2
+    eslint-plugin-jsdoc: ^50.6.17
+    eslint-plugin-jsonc: ^2.20.1
     eslint-plugin-n: ^17.18.0
     eslint-plugin-no-only-tests: ^3.3.0
     eslint-plugin-perfectionist: ^4.13.0
@@ -72,7 +73,7 @@ catalogs:
     vue-eslint-parser: ^10.1.3
     yaml-eslint-parser: ^1.3.0
   test:
-    vitest: ^3.1.3
+    vitest: ^3.1.4
 
 onlyBuiltDependencies:
   - simple-git-hooks
