feat: 将eslint-plugin-import-x替换成eslint-plugin-import-lite

--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "eslint-merge-processors": "catalog:prod",
     "eslint-parser-plain": "catalog:prod",
     "eslint-plugin-antfu": "catalog:prod",
-    "eslint-plugin-import-x": "catalog:prod",
+    "eslint-plugin-import-lite": "catalog:prod",
     "eslint-plugin-jsdoc": "catalog:prod",
     "eslint-plugin-jsonc": "catalog:prod",
     "eslint-plugin-n": "catalog:prod",
