--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -51,7 +51,7 @@ catalogs:
     eslint-merge-processors: ^2.0.0
     eslint-parser-plain: ^0.1.1
     eslint-plugin-antfu: ^3.1.1
-    eslint-plugin-import-x: ^4.15.2
+    eslint-plugin-import-lite: ^0.3.0
     eslint-plugin-jsdoc: ^50.8.0
     eslint-plugin-jsonc: ^2.20.1
     eslint-plugin-n: ^17.20.0
